NIFI-12411 Update PublishAMQP with configurable Header Source Property
This closes #8105

Signed-off-by: David Handermann <exceptionfactory@apache.org>